@@ -1,9 +1,9 @@
 I99804200
-.I-4050
-.I613
-.I4
-.S'FM ST'
+.I4500
+.I670
+.I0
+.S'AM'
 p0
-.I-70
+.I-74
 .I200
 .
