@@ -107,3 +107,10 @@
 	Butonify cambiado a listas de diccionarios.
 	Butonify nuevos tipos de botones: Switch.
 	Cambiados todos los menus
+
+20160307
+	Creada zona inferior
+	WATERFALL
+	Inicio generalización zonas superior e inferior
+	Menus actualizados a dos zonas. 
+
